--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Excursion</title>
-    <link href="./resources/css/style.css" type="text.css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+    <p><video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg"></p>
+    </video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="./resources/images/camp.jpeg"></p>
+    <p><img src="./resources/images/phone.png"></p>
+    <h2>Coming soon for iPhone and Android</h2>
+    <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+    <div class="footer">
+      <p>& Excursion</p>
+    </div>
   </body>
 </html>
