--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#">Download Excursion (Coming Soon!)</a></p>
-    <p><video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg"></p>
-    </video>
+    <p>
+      <a class="link" href="#">Download Excursion (Coming Soon!)</a>
+    </p>
+    <div class="video">
+      <p><video src="./resources/videos/excursion.mp4" autoplay poster="posterimage.jpg"></p>
+      </video>
+    </div>
     <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p><img src="./resources/images/camp.jpeg"></p>
-    <p><img src="./resources/images/phone.png"></p>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <p><img src="./resources/images/camp.jpg"/></p>
+    <p><img src="./resources/images/phone.png"/></p>
     <h2>Coming soon for iPhone and Android</h2>
-    <p><a href="#">Download Excursion (Coming Soon!)</a></p>
+    <p>
+      <a class="link" href="#">Download Excursion (Coming Soon!)</a>
+    </p>
     <div class="footer">
-      <p>& Excursion</p>
+      <p>&copy; Excursion</p>
     </div>
   </body>
 </html>
